--- a/Html-Js/styles/cadastro.css
+++ b/Html-Js/styles/cadastro.css
@@ -20,7 +20,7 @@ body {
 
 .imagem_ilustrativa img {
     object-fit: cover;
-    object-position: 40%;
+    object-position: center;
     width: 100%;
     height: 100%;
 }
@@ -28,11 +28,10 @@ body {
 .cadastro {
     width: 50%;
     display: flex;
-    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0 5%;
-    padding-top: 25px;
+    padding-top: 20px;
 }
 
 .cadastro h1 {
@@ -41,16 +40,18 @@ body {
 }
 
 .formulario_cadastro {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 15px;
     align-items: left;
+    justify-content: left;
 }
 
 .formulario_cadastro div {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
 }
 
 .formulario_cadastro div label {
@@ -64,4 +65,29 @@ body {
     background-color: transparent;
     color: #fff;
     font-size: 16px;
+}
+
+.input_dividido {
+    display: flex;
+    flex-direction: row !important;
+    justify-content: space-between;
+}
+
+.input_dividido div {
+
+    width: 48%;
+}
+
+.cadastrar {
+    align-items: center
+}
+
+.cadastrar button {
+    width: 50%;
+    border-radius: 12px;   
+    background-color: darkorange;
+    border: 1px solid #ccc;
+    font-size: 20px;
+    color: #fff;
+    padding: 8px 0;
 }
