função de salvar as contas cadastradas

--- a/Html-Js/styles/cadastro.css
+++ b/Html-Js/styles/cadastro.css
@@ -37,6 +37,7 @@ body {
 .cadastro h1 {
     font-size: 28px;
     font-family: 'Montserrat', sans-serif;
+    margin: 20px 0;
 }
 
 .formulario_cadastro {
@@ -90,4 +91,9 @@ body {
     font-size: 20px;
     color: #fff;
     padding: 8px 0;
+}
+
+.cadastrar button:hover {
+    background-color: #bb613c;
+    transition: 500ms;
 }
