--- a/Html-Js/styles/login.css
+++ b/Html-Js/styles/login.css
@@ -99,7 +99,7 @@ body {
 }
 
 .login a {
-    text_align: center;
+    text-align: center;
     font-size:20px;
     color: #fff;
     text-decoration: none;
