--- a/Html-Js/styles/cadastro.css
+++ b/Html-Js/styles/cadastro.css
@@ -5,13 +5,14 @@ body {
     color: #fff;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    height: 100%;
 }
 
 .tela_cadastro {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .imagem_ilustrativa {
@@ -30,8 +31,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 5%;
-    padding-top: 20px;
+    padding: 20px 5%;
+;
+    height: 100%;
 }
 
 .cadastro h1 {
@@ -91,9 +93,46 @@ body {
     font-size: 20px;
     color: #fff;
     padding: 8px 0;
+    margin-top: 20px;
 }
 
 .cadastrar button:hover {
     background-color: #bb613c;
     transition: 500ms;
+}
+
+.cadastro a {
+    text-align: center;
+    font-size:20px;
+    color: #fff;
+    text-decoration: none;
+    padding: 20px 0 0 0;
+}
+
+.input_checkbox {
+    display: flex;
+    flex-direction: row !important;
+    gap: 10px;
+    align-items: left;
+    width: fit-content;
+}
+
+.input_checkbox input {
+    width: fit-content;
+    min-height: 25px;
+    min-width: 25px;
+    margin: 0;
+    padding: 0;
+    accent-color: #fff
+}
+
+.input_checkbox label {
+    font-size: 18px !important;
+}
+
+.barra {
+    margin-top: 35px;
+    height: 1px;
+    background-color: #f2f2f2;
+    width: 75%;
 }
