--- a/Html-Js/styles/login.css
+++ b/Html-Js/styles/login.css
@@ -5,13 +5,14 @@ body {
     color: #fff;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    height: 100%;
 }
 
 .tela_login {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .imagem_ilustrativa {
@@ -30,8 +31,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:  0 5%;
-    padding-top: 25px;
+    padding: 20px 5%;
+    height: 100%;
 }
 
 .login h1 {
@@ -54,8 +55,6 @@ body {
 
 .formulario_login div label {
     font-size: 22px;
-
-
 }
 
 .formulario_login input {
@@ -103,13 +102,21 @@ body {
     font-size:20px;
     color: #fff;
     text-decoration: none;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
 }
 
 .barra {
-    margin-top: 20px;
-    height: 5px;
+    margin-top: 35px;
+    height: 1px;
     background-color: #f2f2f2;
     width: 75%;
+}
 
+.logar button:hover {
+    background-color: #bb613c;
+    transition: 500ms;
+}
+
+.input_checkbox label {
+    font-size: 18px !important;
 }
