--- a/Html-Js/styles/cadastro.css
+++ b/Html-Js/styles/cadastro.css
@@ -27,12 +27,17 @@ body {
 
 .imagem_ilustrativa {
     width: 50%;
+    height: 100dvh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    min-height: 1080px;
 }
 
 .imagem_ilustrativa img {
     object-fit: cover;
     object-position: center;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
 }
 
@@ -42,8 +47,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 20px 5%;
-;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .cadastro h1 {
