--- a/Html-Js/styles/perfil.css
+++ b/Html-Js/styles/perfil.css
@@ -288,3 +288,26 @@ body {
     flex-direction: column;
   }
 }
+
+.input_editar_perfil {
+  width: 50%;
+  padding: 8px 12px;
+  border-radius: 8px;
+  outline-color: #667eea;
+  border: 2px solid #e2e8f0;
+  font-size: 24px;
+  text-align: center;
+}
+
+.select_editar_perfil {
+  width: 100%;
+  padding: 8px 12px;
+  border-radius: 8px;
+  outline-color: #667eea;
+}
+
+.option_editar_perfil {
+  display: flex;
+  text-align: center;
+  
+}
