--- a/Html-Js/styles/feed.css
+++ b/Html-Js/styles/feed.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: linear-gradient(180deg,rgb(34, 20, 160) 0%,rgb(161, 143, 226) 100%);
   min-height: 100vh;
   color: #333;
 }
