--- a/Html-Js/styles/login.css
+++ b/Html-Js/styles/login.css
@@ -27,11 +27,13 @@ body {
 
 .imagem_ilustrativa {
     width: 50%;
+    height: 100dvh;
+    min-height: 1000px
 }
 
 .imagem_ilustrativa img {
     object-fit: cover;
-    object-position: 40%;
+    object-position: 48%;
     width: 100%;
     height: 100%;
 }
