--- a/Html-Js/styles/cadastro.css
+++ b/Html-Js/styles/cadastro.css
@@ -27,18 +27,15 @@ body {
 
 .imagem_ilustrativa {
     width: 50%;
-    height: 100dvh;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    min-height: 1080px;
+    min-height: 100%;
 }
 
 .imagem_ilustrativa img {
     object-fit: cover;
-    object-position: center;
-    /* width: 100%; */
-    height: 100%;
+    object-position: 48%;
+    width: 100%;
+    min-height: 100% !important;
+    height: 100dvh;
 }
 
 .cadastro {
@@ -47,7 +44,6 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 20px 5%;
-    /* height: 100%; */
 }
 
 .cadastro h1 {
