--- a/Html-Js/styles/login.css
+++ b/Html-Js/styles/login.css
@@ -27,15 +27,15 @@ body {
 
 .imagem_ilustrativa {
     width: 50%;
-    height: 100dvh;
-    min-height: 1000px
+    min-height: 100%;
 }
 
 .imagem_ilustrativa img {
     object-fit: cover;
-    object-position: 48%;
+    object-position: center;
     width: 100%;
-    height: 100%;
+    min-height: 100% !important;
+    height: 100dvh;
 }
 
 .login {
@@ -44,7 +44,6 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 20px 5%;
-    height: 100%;
 }
 
 .login h1 {
@@ -53,6 +52,7 @@ body {
 }
 
 .formulario_login {
+    width: 80%;
     display: flex;
     flex-direction: column;
     gap: 25px;
